# python-api-testing

./: .env.example  README.md  pyproject.toml  requirements.txt
clients/: base_client.py  fake_store.py
config/: settings.py
data/: products.py
reports/: report.html
schemas/: product_schema.json
tests/: conftest.py  test_products.py
utils/: assertions.py
